# Gear-Meshing

./: .env.example  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: documentation.yaml
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  remark-fix-mdx.js  sidebars-dev.js  sidebars.ts
docs/contents/development/ai/: prompt-engineering.md
docs/contents/development/infrastructure/: configuration.md
docs/contents/development/performance/: benchmarking.md
docs/contents/development/services/: api-gateway.md
docs/contents/document/: getting-started.md  roadmap.md
docs/docs/: contributing.md  getting-started.mdx  intro.md  roadmap.md
docs/docs/development/ai/: overview.mdx  prompt-engineering.md
docs/docs/development/data/: architecture.mdx  persistence.md  validation.mdx
docs/docs/development/infrastructure/: architecture.md  kubernetes.md
docs/docs/development/integrations/: github.md  jenkins.md  slack.mdx
docs/docs/development/overview/: design-patterns.md  index.mdx  system-design.mdx
docs/docs/development/performance/: monitoring.md  scaling.md
docs/docs/development/security/: architecture.md  audit-logging.mdx  data-protection.md
docs/docs/development/services/: api-gateway.mdx  code-analysis-service.md  llm-orchestrator.md  llm-orchestrator.mdx  notification-service.md  role-services.md  task-manager.md  user-service.md
docs/docs/development/troubleshooting/: logging.md
docs/docs/development/workflow/: engine.md  templates.mdx
docs/docs/integrations/: github.md  jira.md  slack.mdx
docs/docs/roles/: pm.md  rd.md  rd.mdx  sre.mdx
docs/docs/workflows/: deployment.md  development.md  development.mdx  requirements.md  testing.md
docs/src/pages/: index.tsx  versions.tsx
docs/versioned_docs/version-0.1.0/: contributing.md
docs/versioned_sidebars/: version-0.1.0-sidebars.json
gearmeshing_ai/: autogen_impl.py
gearmeshing_ai/role/: autogen_impl.py  rd.py  sa_sd.py
(+37 files in other folders)
