[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gearmeshing-ai"
version = "0.0.0"
description = "🤖 A highly self-hostable AI-powered software engineering platform that plugs autonomous developer agents into your workflow."
authors = [
    { name = "Chisanan232", email = "chi10211201@cycu.org.tw"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "ai agents", "ai-assistents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [
    { include = "gearmeshing_ai/" },
]

[project.urls]
Homepage = "https://github.com/Chisanan232/Gear-Meshing"
#Documentation = "<the documentation host URL of your lib>"
Repository = "https://github.com/Chisanan232/Gear-Meshing"
#Changelog = "<the release note page in documentation or GitHub release info>"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307863/90182761188"

# TODO: Let the dependencies for development to be optional
#[tool.poetry.group.dev]
#optional = true

[tool.poetry.group.dev.dependencies]
# Dependency for test
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
#pytest-html = "^4.1.1"    # Generate a report as HTML about test
#pytest-rerunfailures = "^14.0"    # Rerun feature in test for PyTest
coverage = "^6.2"    # Test coverage feature with service *CodeCov*
#coveralls = "^3.3.1"    # Test coverage feature with service *Coverall*
# Dependency for CI
pre-commit = "^3.5.0"
pylint = "^3.1.0"
mypy = "^1.2.0"
